--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.0"
+version = "1.0"+System.getenv("BUILD_NUMBER")
 group= "com.projectreddog.deathcube" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "DeathCube"
 
